--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
             <h1>Photo Gallery</h1>
         </header>
         <div class="gallery">
-            <img src="Photo-001\photo (1).webp">
-            <img src="Photo-001\photo (2).webp">
-            <img src="Photo-001\photo (3).webp">
-            <img src="Photo-001\photo (4).webp">
-            <img src="Photo-001\photo (5).webp">
-            <img src="Photo-001\photo (6).webp">
-            <img src="Photo-001\photo (7).webp">
-            <img src="Photo-001\photo (8).webp">
-            <img src="Photo-001\photo (9).webp">
-            <img src="Photo-001\photo (10).webp">
-            <img src="Photo-001\photo (11).webp">
-            <img src="Photo-001\photo (12).webp">
-            <img src="Photo-001\photo (13).webp">
-            <img src="Photo-001\photo (14).webp">
-            <img src="Photo-001\photo (15).webp">
-            <img src="Photo-001\photo (16).webp">
-            <img src="Photo-001\photo (17).webp">
-            <img src="Photo-001\photo (18).webp">
-            <img src="Photo-001\photo (19).webp">
-            <img src="Photo-001\photo (20).webp">
+            <img src="Photos-001\photo (1).jpg">
+            <img src="Photos-001\photo (2).jpg">
+            <img src="Photos-001\photo (3).jpg">
+            <img src="Photos-001\photo (4).jpg">
+            <img src="Photos-001\photo (5).jpg">
+            <img src="Photos-001\photo (6).jpg">
+            <img src="Photos-001\photo (7).jpg">
+            <img src="Photos-001\photo (8).jpg">
+            <img src="Photos-001\photo (9).jpg">
+            <img src="Photos-001\photo (10).jpg">
+            <img src="Photos-001\photo (11).jpg">
+            <img src="Photos-001\photo (12).jpg">
+            <img src="Photos-001\photo (13).jpg">
+            <img src="Photos-001\photo (14).jpg">
+            <img src="Photos-001\photo (15).jpg">
+            <img src="Photos-001\photo (16).jpg">
+            <img src="Photos-001\photo (17).jpg">
+            <img src="Photos-001\photo (18).jpg">
+            <img src="Photos-001\photo (19).jpg">
+            <img src="Photos-001\photo (20).jpg">
         </div>
         <footer class="footer">&#169; 2024 Copyright:Umar Al Mukhtar</footer>
     </body>
